# COMP7607_NLP

./: .gitignore  Multi-agent recruiting workflow.ipynb  README.md  agent.py  api.py  openapi_letta.json  openapi_openai.json  pyproject.toml  streamlit.py
api/: create_agent.py  gcal_token.json  human.txt  main.py  tasks.json  tools.py
api/functions/: coding_functions.py  crazy_functions.py  crazy_translate.py  file_functions.py  google_calendar_test_setup.py  gsearch.py  list_upcoming_events.py  schedule_event.py
frontend/src/components/: TaskManager.tsx
