[tool.poetry]
name = "pg-copilot"
version = "0.1.0"
description = ""
authors = ["Jesse Chow <jessechowpc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
letta = "^0.5.2"
fastapi = "^0.115.4"
streamlit = "^1.40.1"
openai = "^1.54.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
